--- a/style.css
+++ b/style.css
@@ -376,27 +376,27 @@ body.dark-mode .sensor-image {
 
 /* Cor do fundo do switch no modo escuro */
 body.dark-mode .theme-switch {
-  background: linear-gradient(145deg, #1a1a1a, #2e2e2e);
-  box-shadow: inset 3px 3px 6px #000000, inset -3px -3px 6px #333333;
+  background: linear-gradient(145deg, #1e1e1fff, #0d0d13ff);
+  box-shadow: inset 3px 3px 6px #040404a5, inset -3px -3px 6px #333333;
 }
 
 /* Bolinha que desliza */
 .switch-handle {
   width: 24px;
   height: 24px;
-  background: linear-gradient(145deg, #000000, #3a3a3a);
+  background: linear-gradient(145deg, #0383f9ff, #e8e0e0ff);
   border-radius: 50%;
   position: absolute;
   left: 3px;
   transition: all 0.4s ease;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+  box-shadow: 2px 2px 5px rgba(10, 10, 10, 0.78);
 }
 
 /* Quando estiver no modo escuro, a bolinha vai pra direita e fica branca */
 body.dark-mode .switch-handle {
   left: 33px;
-  background: linear-gradient(145deg, #ffffff, #cfcfcf);
-  box-shadow: 2px 2px 5px rgba(255, 255, 255, 0.2);
+  background: linear-gradient(145deg, #000364ff, #bf00ffff);
+  box-shadow: 2px 2px 5px rgba(3, 2, 18, 0.89);
 }
 .theme-switch:active .switch-handle {
   transform: scale(0.9);
