--- a/style.css
+++ b/style.css
@@ -23,7 +23,16 @@
   transition: opacity 0.6s ease, visibility 0.6s ease;
   filter: url(#goo);
 }
-
+.loader-footer {
+  position: absolute;
+  bottom: 10px;
+  left: 50%;
+  transform: translateX(-50%);
+  color: #4f4d4dff;
+  font-size: 10px;
+  font-family: Arial, sans-serif;
+  opacity: 0.7;
+}
 .loader.hidden {
   opacity: 0;
   visibility: hidden;
