--- a/style.css
+++ b/style.css
@@ -328,6 +328,13 @@ input[type="number"] {
 
 .output-container select {
   position: relative;
+  appearance: none;
+  -webkit-appearance: none;
+  -moz-appearance: none;
+  background-image: linear-gradient(to bottom, #4e62fbff, #57caffff);
+  background-repeat: no-repeat;
+  background-position: right 6px center;
+  background-size: 12px;
   width: 70px;
   height: 20px;
   border-radius: 10px;
@@ -342,6 +349,22 @@ input[type="number"] {
 
 .output-container select:hover {
   background-color: #5229f8ff;
+}
+
+/* Custom arrow for Chrome & Safari */
+.output-container select::-ms-expand {
+  display: none;
+}
+
+.output-container select::after {
+  content: "▼";
+  position: absolute;
+  right: 8px;
+  top: 50%;
+  font-size: 10px;
+  color: #ffffff;
+  pointer-events: none;
+  transform: translateY(-50%);
 }
 
 /* Saída Temperatura (abaixo do sensor) */
